feat: add exponential smoothing calculation for prediction
- update api docs
- add prediction calculation with exponential smoothing
- run pint.sh
